--- a/01-复杂数据类型/_02枚举/_02枚举.csproj
+++ b/01-复杂数据类型/_02枚举/_02枚举.csproj
@@ -4,12 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3737C847-2DAD-423F-B7AF-307CDFCCBB46}</ProjectGuid>
+    <ProjectGuid>{AA9EB6FF-90FE-4D4D-8786-2A391FBD576B}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_01_常量</RootNamespace>
-    <AssemblyName>_01、常量</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>_02枚举</RootNamespace>
+    <AssemblyName>_02枚举</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -44,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sesons.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
