--- a/MyReflection/DB.SqlServer/DB.SqlServer.csproj
+++ b/MyReflection/DB.SqlServer/DB.SqlServer.csproj
@@ -41,7 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GenericTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReflectionTest.cs" />
     <Compile Include="Singleton.cs" />
     <Compile Include="SqlServerHelper.cs" />
   </ItemGroup>
