--- a/Attribute/MyAttribute/MyAttribute.csproj
+++ b/Attribute/MyAttribute/MyAttribute.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomAttribute.cs" />
+    <Compile Include="Extension\RemarkExtension.cs" />
+    <Compile Include="Extension\ValidateExtension.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
@@ -51,5 +53,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
